# icsd-optimade

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  optimade.yaml  pyproject.toml
src/adapters/structures/: cif.py  dict.py  pycifrw.py  utils.py
src/icsd_optimade/: client.py  fields.py  ingest.py  mapper.py  utils.py
src/icsd_optimade/adapters/structures/: cif.py  pycifrw.py  utils.py
tests/: conftest.py  test_client.py  test_ingest.py  test_mapper.py
